fix(iconify): avoid layout shift

--- a/src/style/icon.css
+++ b/src/style/icon.css
@@ -1,6 +1,8 @@
 iconify-icon {
   display: inline-block;
   vertical-align: -0.125em;
+  width: 1em;
+  height: 1em;
 }
 
 /* right margin for Iconify icons */
